tests/fail/çok-ya-da.kip
Bir doğal-sayı
ya da sıfır
ya da bir doğal-sayının ardılı
olabilir.
